# mcp-data-analysis-toolkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: test.yml
assets/screenshots/: README.md
config/: server_config.json
data/: sample_data.csv
docs/: README.md
docs/api/: api-reference.md  examples.md
docs/setup/: claude-desktop-setup.md  getting-started.md  github-publication.md
examples/: demo.py
src/: __init__.py
src/clients/: __init__.py  client_example.py
src/mcp_servers/: __init__.py  advanced_server.py  basic_server.py  data_analysis_server.py
tests/: __init__.py  test_enhanced_mcp.py  test_mcp.py
